--- a/frontend.html
+++ b/frontend.html
@@ -54,11 +54,11 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/446455-frontend-developer-m-w-d'>Job @ NEUGELB Studios (Frankfurt): Frontend Develo... | JOIN</a></h5> 
+<h5><a href='https://neugelb.join.com/jobs/446455-frontend-developer-m-w-d'>Job @ NEUGELB Studios (Frankfurt): Frontend Develo... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rheingaufoundersportfolio.recruitee.com/o/senior-frontend-developer-fmd-realxdata-gmbh-1'>
+<h5><a href='https://rheingaufoundersportfolio.recruitee.com/o/senior-frontend-developer-fmd-realxdata-gmbh-1'>
       Senior Frontend Developer (f/m/d) @realxdata GmbH - Rheingau Founders Portfolio
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -166,7 +166,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502532002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502532002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -222,7 +222,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cnfa.org/632a5fca-d939-427b-a4b0-43cd0f31fb89'>Cultivating New Frontiers in Agriculture (CNFA) - Gender, Youth, and Social Dynamics (GYSD) Lead - Zimbabwe</a></h5> 
+<h5><a href='https://jobs.lever.co/cnfa.org/632a5fca-d939-427b-a4b0-43cd0f31fb89'>Cultivating New Frontiers in Agriculture (CNFA) - Gender, Youth, and Social Dynamics (GYSD) Lead - Zimbabwe</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -332,7 +332,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://emailmeter.recruiterbox.com/jobs/fk03rfa/?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emailmeter.recruiterbox.com/jobs/fk03rfa/?source=twitter'>
     Frontend Developer Intern at Email Meter
 </a></h5> 
 <p><span class="badge badge-light">Madrid Madrid Madrid United States New York</span></p>
@@ -350,7 +350,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://tedconferencesllc.applytojob.com/apply/9td5jDSovf/Frontend-Engineer?utm_source=TED+Staff+for+Technically+Speaking&utm_campaign=a844a204d5-EMAIL_CAMPAIGN_2019_10_29_01_29&utm_medium=email&utm_term=0_3b164e9b38-a844a204d5-302500633'>Front-end Engineer - TED Conferences LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tedconferencesllc.applytojob.com/apply/9td5jDSovf/Frontend-Engineer?utm_source=TED+Staff+for+Technically+Speaking&utm_campaign=a844a204d5-EMAIL_CAMPAIGN_2019_10_29_01_29&utm_medium=email&utm_term=0_3b164e9b38-a844a204d5-302500633'>Front-end Engineer - TED Conferences LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -362,7 +362,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -370,7 +370,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698568158-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698568158-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -390,7 +390,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dept/jobs/1935237'>Job Application for Frontend Developer (m/w/div) at Dept</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1935237'>Job Application for Frontend Developer (m/w/div) at Dept</a></h5> 
 <p><span class="badge badge-light">Hamburg  Hamburg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -442,11 +442,11 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
