--- a/machine.html
+++ b/machine.html
@@ -123,7 +123,7 @@ team?...</p>
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://neya.applytojob.com/apply/Jux9HixKaS/Machine-Learning-And-Computer-Vision-Engineer-multiple-Levels'>Machine Learning and Computer Vision Engineer (multiple levels) - Neya Systems LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://neya.applytojob.com/apply/Jux9HixKaS/Machine-Learning-And-Computer-Vision-Engineer-multiple-Levels'>Machine Learning and Computer Vision Engineer (multiple levels) - Neya Systems LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -449,7 +449,7 @@ ML;?...</p>
 <p>Oct 11, 2019 ... Machine Learning Engineer. Seattle, WA. Engineering ? Machine Learning. Full-
 time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -491,7 +491,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697738897-researcher-machine-learning-for-intelligent-systems-rtc-ai-'>Bosch Group Researcher ? Machine Learning for Intelligent Systems (RTC -AI) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697738897-researcher-machine-learning-for-intelligent-systems-rtc-ai-'>Bosch Group Researcher ? Machine Learning for Intelligent Systems (RTC -AI) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
