--- a/project-manager.html
+++ b/project-manager.html
@@ -230,11 +230,11 @@ Technical Project Manager | Arlington, VA | AbleVets
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1898773?gh_src=2664dba21'>Job Application for Senior Program Manager, GLAM and Culture at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1898773?gh_src=2664dba21'>Job Application for Senior Program Manager, GLAM and Culture at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bgcpartners.referrals.selectminds.com/jobs/sr-project-manager-5242'>Sr. Project Manager - Cantor Fitzgerald / BGC Partners / GFI / Newmark Knight Frank Careers</a></h5> 
+<h5><a href='https://bgcpartners.referrals.selectminds.com/jobs/sr-project-manager-5242'>Sr. Project Manager - Cantor Fitzgerald / BGC Partners / GFI / Newmark Knight Frank Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -274,7 +274,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">San Francisco, California United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698668902-project-manager-tech-transfer'>Biogen Project Manager Tech Transfer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698668902-project-manager-tech-transfer'>Biogen Project Manager Tech Transfer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -302,7 +302,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://unicepta.softgarden.io/job/5262523/Project-Manager-Research-m-w-d-?jobDbPVId=14421848&amp;l=de'>Project Manager Research  (m/w/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://unicepta.softgarden.io/job/5262523/Project-Manager-Research-m-w-d-?jobDbPVId=14421848&amp;l=de'>Project Manager Research  (m/w/d)</a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -394,7 +394,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://croydon.referrals.selectminds.com/jobs/project-manager-grade-14-%C2%A343590-%C2%A345585-307'>Project Manager - Grade 14 ?43,590 - ?45,585 - Croydon Jobs Careers</a></h5> 
+<h5><a href='https://croydon.referrals.selectminds.com/jobs/project-manager-grade-14-%C2%A343590-%C2%A345585-307'>Project Manager - Grade 14 ?43,590 - ?45,585 - Croydon Jobs Careers</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -438,7 +438,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://ircareers.referrals.selectminds.com/jobs/hvac-construction-project-manager-trane-38402'>HVAC / Construction Project Manager - TRANE - Ingersoll Rand Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ircareers.referrals.selectminds.com/jobs/hvac-construction-project-manager-trane-38402'>HVAC / Construction Project Manager - TRANE - Ingersoll Rand Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -446,7 +446,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://postings.com/21758/jobs/construction-extraction/project-manager-owers-rep-fort-pierce-fl-34950/84014'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/21758/jobs/construction-extraction/project-manager-owers-rep-fort-pierce-fl-34950/84014'>
 Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Custom Executive Search, by John Barto
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
